--- a/style.css
+++ b/style.css
@@ -1,317 +1,314 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box; /** la largeur des box tient compte des bordures margin et padding **/
-    --color-primary: #9356dc;
-    --color-secondary: #ff79da;
-    --color-tertiary: #99e2d0;
-  }
-  
-  body {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-  }
-  
-  h1 {
-    margin: 1.5rem auto 0.6rem;
-    font-size: 1.5rem;
-    font-weight: 700;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  /** la largeur des box tient compte des bordures margin et padding **/
+  --color-primary: #9356dc;
+  --color-secondary: #ff79da;
+  --color-tertiary: #99e2d0;
+}
 
-  h2 {
-    font-weight: 800;
-    font-size: 1.5rem;
-    margin: 1.5rem 0 1rem 0;
-  }
-  
-  h3 {
-    margin-bottom: 0.4rem;
-    font-size: 1rem;
-    font-weight: 800;
-  }
+body {
+  font-family: "Roboto", sans-serif;
+  font-size: 16px;
+}
 
-  p {
-    font-weight: 300;
-    color: #424242;
-  }
+h1 {
+  margin: 1.5rem auto 0.6rem;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
 
-  a, a:visited {
+h2 {
+  font-weight: 800;
+  font-size: 1.5rem;
+  margin: 1.5rem 0 1rem 0;
+}
+
+h3 {
+  margin-bottom: 0.4rem;
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+p {
+  font-weight: 300;
+  color: #424242;
+}
+
+a, a:visited {
   text-decoration: none;
   color: black;
-  }
+}
 
-  /* Header */
+/* Header */
+#logo {
+  display: inline-block;
+  width: 100%;
+  padding-top: 0.5rem;
+  box-shadow: 0px 0px 20px -3px #5B5B5B;
+  text-align: center;
+}
 
-  #logo {
-    display: inline-block;
-    width: 100%;
-    padding-top: 0.5rem;
-    box-shadow: 0px 0px 20px -3px #5B5B5B;
-    text-align: center;
-  }
+#logo img {
+  width: 10rem;
+  height: 3rem;
+}
 
-  #logo img {
-    width: 10rem;
-    height: 3rem;
-  }
+/* Searchbar */
+#location {
+  background-color: #f1f1f1;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
+#icone_location {
+  font-weight: bold;
+  font-size: 15px;
+  padding-left: 1rem;
+  height: 3rem;
+  display: flex;
+  align-items: center;
+}
 
-  /* Searchbar */
+input {
+  border: none;
+  background-color: #f1f1f1;
+}
 
-  #location {
-    background-color: #f1f1f1;
-    text-align: center;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  #icone_location {
-    font-weight: bold;
-    font-size: 15px;
-    padding-left: 1rem;
-    height: 3rem;
-    display: flex;
-    align-items: center;
-  }
-  
-  input {
-    border: none;
-    background-color: #f1f1f1;
-  }
-  
-  input[type="text"]::placeholder {
-    color: #424242;
-    font-weight: 700;
-    font-family: "Roboto";
-    text-align: start;
-    padding-left: 1rem;
-  }
+input[type=text]::placeholder {
+  color: #424242;
+  font-weight: 700;
+  font-family: "Roboto";
+  text-align: start;
+  padding-left: 1rem;
+}
 
-  /* Presentation */
+/* Presentation */
+.first_container {
+  background-color: #f6f6f6;
+}
 
-  .first_container {
-    background-color: #f6f6f6;
-  }
+.content_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  margin: 0 2rem 0 2rem;
+  padding: 1rem 1rem 2rem 1rem;
+}
 
-  .content_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    margin: 0 2rem 0 2rem;
-    padding: 1rem 1rem 2rem 1rem;
-  }
+.container_button {
+  margin: 2rem;
+}
 
-  .container_button {
-    margin: 2rem;
-  }
+.button_explore {
+  border-radius: 30px;
+  border: none;
+  padding: 0.9rem 1.2rem;
+  height: 10rem;
+  min-width: 50rem;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  color: white;
+  background: #ff79da;
+  background: -moz-linear-gradient(-45deg, #ff79da 0%, #9356dc 100%);
+  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #9356dc 100%);
+  background: linear-gradient(135deg, #ff79da 0%, #9356dc 100%);
+  font-weight: 400;
+  font-size: 16px;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
 
-  .button_explore {
-      border-radius: 30px;
-      border: none;
-      padding: 0.9rem 1.2rem;
-      height: 10rem;
-      min-width: 50rem;
-      box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
-      color: white;
-      background: rgb(255,121,218);
-      background: -moz-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-      background: -webkit-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-      background: linear-gradient(135deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-      font-weight: 400;
-      font-size: 16px;
-      justify-content: center;
-      align-items: center;
-      cursor: pointer;
-  }
+/* Functioning */
+#functioning {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 1rem;
+}
 
-  /* Functioning */
+.list_button_functioning {
+  margin-left: 0.5rem;
+}
 
-  #functioning {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding: 1rem;
-  }
+.functioning_card {
+  height: 60px;
+  background: #f6f6f6;
+  border-radius: 20px;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  display: inline-flex;
+  margin: 1rem 0;
+  align-items: center;
+  padding: 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  width: 100%;
+}
 
-  .list_button_functioning {
-    margin-left: 0.5rem;
-  }
+.number {
+  background-color: var(--color-primary);
+  border-radius: 100px;
+  width: 24px;
+  height: 24px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  position: absolute;
+  margin-left: -1.8rem;
+  color: white;
+  padding-top: 0.2rem;
+  font-size: 14px;
+  font-weight: 400;
+}
 
-  .functioning_card {
-    height: 60px;
-    background: #f6f6f6;
-    border-radius: 20px;
-    box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
-    display: inline-flex;
-    margin: 1rem 0;
-    align-items: center;
-    padding: 1rem;
-    font-size: 1rem;
-    font-weight: 700;
-    width: 100%;
-  }
+.button_functioning {
+  padding: 1rem;
+}
 
-  .number {
-    background-color: var(--color-primary);
-    border-radius: 100px;
-    width: 24px;
-    height: 24px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    position: absolute;
-    margin-left: -1.8rem;
-    color: white;
-    padding-top: 0.2rem;
-    font-size: 14px;
-    font-weight: 400;
-  }
+.button_functioning > i {
+  color: #6d6d6d;
+  padding-right: 1rem;
+  font-weight: 900;
+}
 
-  .button_functioning {
-    padding: 1rem;
-  }
+/* Restaurants */
+#restaurants {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 1rem;
+  margin-bottom: 2rem;
+  background-color: #f6f6f6;
+}
 
-  .button_functioning>i {
-    color: #6d6d6d;
-    padding-right: 1rem;
-    font-weight: 900;
-  }
-  
-  /* Restaurants */
+.restaurant {
+  background-color: white;
+  border-radius: 20px;
+  margin-bottom: 1rem;
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
 
-  #restaurants {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding: 1rem;
-    background-color: #f6f6f6;
-  }
+.new {
+  position: absolute;
+  right: 0;
+  background-color: var(--color-tertiary);
+  margin: 0.8rem 1.5rem 1.5rem 1.5rem;
+  padding: 0.5rem 0.7rem;
+  border-radius: 5px;
+}
 
-  .restaurant {
-    background-color: white;
-    border-radius: 20px;
-    margin-bottom: 1rem;
-    box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
-    cursor: pointer;
-  }
+.new span {
+  font-weight: 900;
+  opacity: 0.5;
+}
 
-  .new {
-    position: absolute;
-    right: 0;
-    background-color: var(--color-tertiary);
-    margin: 0.8rem 1.5rem 1.5rem 1.5rem;
-    padding: 0.5rem 0.7rem;
-    border-radius: 5px;
-  }
+#la_palette_du_gout {
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
+  background-size: cover;
+  background-position: 50% 60%;
+  height: 11rem;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+}
 
-  .new span {
-    font-weight: 900;
-    opacity: 0.5;
-  }
+#la_note_enchantee {
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
+  background-size: cover;
+  background-position: 50% 60%;
+  height: 11rem;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+}
 
-  #la_palette_du_gout {
-    background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
-    background-size: cover;
-    background-position: 50% 60%;
-    height: 11rem;
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
+#a_la_francaise {
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
+  background-size: cover;
+  background-position: 50% 60%;
+  height: 11rem;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+}
 
-  #la_note_enchantee {
-    background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
-    background-size: cover;
-    background-position: 50% 60%;
-    height: 11rem;
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
+#le_delice_des_sens {
+  background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
+  background-size: cover;
+  background-position: 50% 60%;
+  height: 11rem;
+  width: 100%;
+  border-radius: 20px 20px 0 0;
+}
 
-  #a_la_francaise {
-    background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
-    background-size: cover;
-    background-position: 50% 60%;
-    height: 11rem;
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
+.block_description {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  #le_delice_des_sens {
-    background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
-    background-size: cover;
-    background-position: 50% 60%;
-    height: 11rem;
-    width: 100%;
-    border-radius: 20px 20px 0 0;
-  }
+.restau_description {
+  margin: 0.5rem 0.8rem;
+  cursor: pointer;
+}
 
-  .block_description {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+.clic_heart > i {
+  color: #6d6d6d;
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  font-size: 1.2rem;
+  font-weight: 100;
+  padding-right: 1.5rem;
+  padding-bottom: 1rem;
+}
 
-  .restau_description {
-    margin: 0.5rem 0.8rem;
-    cursor: pointer;
-  }
+.clic_heart > input {
+  appearance: none;
+}
 
-  .clic_heart>i {
-    color: #6d6d6d;
-    display: flex;
-    justify-content: flex-end;
-    cursor: pointer;
-    font-size: 1.2rem;
-    font-weight: 100;
-    padding-right: 1.5rem;
-    padding-bottom: 1rem;
-  }
+/* Footer */
+#container_footer {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  padding: 1rem;
+  color: white;
+  background-color: #353535;
+}
 
-  .clic_heart>input {
-    appearance: none;
-  }
+.list_footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  margin-bottom: 2rem;
+}
 
-  /* Footer */
+footer h2 {
+  font-family: "Shrikhand", sans-serif;
+  font-weight: 500;
+  margin-top: 1rem;
+}
 
-  #container_footer {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    padding: 1rem;
-    color: white;
-    background-color: #353535;
-  }
+.list_footer > a {
+  color: white;
+  flex-direction: column;
+  margin: 0.3rem 0;
+  font-weight: 500;
+}
 
-  .list_footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    margin-bottom: 2rem;
-  }
+.list_footer i {
+  width: 10%;
+}
 
-  footer h2 {
-    font-family: "Shrikhand", sans-serif;
-    font-weight: 500;
-    margin-top: 1rem;
-  }
-
-  .list_footer>a {
-    color: white;
-    flex-direction: column;
-    margin: 0.3rem 0;
-    font-weight: 500;
-  }
-
-  .list_footer i {
-    width: 10%;
-  }
+/*# sourceMappingURL=style.css.map */
