--- a/style.css
+++ b/style.css
@@ -8,6 +8,82 @@
   --color-tertiary: #99e2d0;
 }
 
+.loader {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  background: #f2f2f2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0.8;
+  transition: opacity 0.3s ease-out;
+  animation: loadinger 0.3s;
+  animation-delay: 3s;
+  animation-fill-mode: both;
+}
+
+.dots {
+  width: 3rem;
+  height: 3rem;
+  display: grid;
+  grid-template-rows: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  align-items: center;
+}
+
+.dots > div {
+  width: 0.5em;
+  height: 0.5em;
+  background: #9356dc;
+  background: linear-gradient(90deg, #9356dc 0%, #ff79da 80%);
+  background: -webkit-linear-gradient(90deg, #9356dc 0%, #ff79da 80%);
+  background: -moz-linear-gradient(90deg, #9356dc 0%, #ff79da 80%);
+  animation: fade 1.5s alternate ease-in-out 3;
+  border-radius: 50%;
+}
+
+.dots > div:nth-of-type(2),
+.dots > div:nth-of-type(4) {
+  animation-delay: 0.25s;
+}
+
+.dots > div:nth-of-type(3),
+.dots > div:nth-of-type(5),
+.dots > div:nth-of-type(7) {
+  animation-delay: 0.5s;
+}
+
+.dots > div:nth-of-type(6),
+.dots > div:nth-of-type(8) {
+  animation-delay: 0.75s;
+}
+
+.dots > div:nth-of-type(9) {
+  animation-delay: 1s;
+}
+
+@keyframes fade {
+  to {
+    opacity: 0.2;
+  }
+}
+@keyframes loadinger {
+  100% {
+    opacity: 1;
+    visibility: hidden;
+  }
+}
+.loader > span {
+  margin: 2rem;
+  text-align: center;
+  font-size: 2rem;
+  font-family: "Shrikhand", sans-serif;
+  font-weight: 700;
+  text-shadow: 0 0 5px #9356dc;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
@@ -270,6 +346,15 @@ input[type=text]::placeholder {
   font-weight: 100;
   padding-right: 1.5rem;
   padding-bottom: 1rem;
+}
+
+input:checked ~ .fas {
+  transition-duration: 0.5s;
+  opacity: 1;
+  font-weight: 800;
+  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #9356dc 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .clic_heart > input {
