--- a/la_note_enchantee.css
+++ b/la_note_enchantee.css
@@ -1,7 +1,8 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /** la largeur des box tient compte des bordures margin et padding **/
+  box-sizing: border-box;
+  /** la largeur des box tient compte des bordures margin et padding **/
   --color-primary: #9356dc;
   --color-secondary: #ff79da;
   --color-tertiary: #99e2d0;
@@ -32,6 +33,10 @@ h3 {
   margin-bottom: 0.4rem;
   font-size: 1rem;
   font-weight: 800;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 90%;
 }
 
 p {
@@ -50,7 +55,6 @@ input {
 }
 
 /* Header */
-
 #logo {
   display: inline-block;
   width: 100%;
@@ -81,16 +85,21 @@ input {
 }
 
 /* Main picture */
-
 .picture_food {
   background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
   background-size: cover;
   background-position: 50% 50%;
-  height: 18rem;
+  height: 22rem;
   width: 100%;
 }
 
 /* Main section */
+@media screen and (min-width: 1000px) {
+  section {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+}
 
 #title_icon {
   align-content: start;
@@ -98,13 +107,48 @@ input {
   justify-content: space-between;
 }
 
-.clic_heart>i {
+/*** heart ***/
+.clic_heart > i {
+  color: #6d6d6d;
+  display: flex;
+  justify-content: flex-end;
+  cursor: pointer;
+  font-size: 1.5rem;
   font-weight: 100;
+  margin-top: -2rem;
 }
 
+input:checked ~ .fas {
+  transition-duration: 0.5s;
+  opacity: 1;
+  font-weight: 800;
+  background: -webkit-linear-gradient(-45deg, #ff79da 0%, #9356dc 100%);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: heartchecked 0.8s Linear both;
+}
+
+@keyframes heartchecked {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+/*** menu card ***/
 .main_section {
   display: flex;
-  width: 100%;
   flex-direction: column;
   justify-content: start;
   border-radius: 50px 50px 0 0;
@@ -112,17 +156,64 @@ input {
   margin-top: -3rem;
   background-color: #f6f6f6;
 }
+@media screen and (min-width: 1000px) {
+  .main_section {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+  }
+}
 
+.starter {
+  -webkit-animation-delay: 0.15s;
+  animation-delay: 0.15s;
+}
+
+.dish {
+  -webkit-animation-delay: 0.45s;
+  animation-delay: 0.45s;
+}
+
+.dessert {
+  -webkit-animation-delay: 0.75s;
+  animation-delay: 0.75s;
+}
+
+.menu_details {
+  animation: animsmooth 1.5s both;
+  -webkit-animation: animsmooth 1.5s both;
+}
+
+@keyframes animsmooth {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 100%);
+    transform: translate3d(0, 100%, 100%);
+  }
+  50% {
+    opacity: 0.5;
+    -webkit-transform: translate3d(0, 50%, 50%);
+    transform: translate3d(0, 50%, 50%);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
 .menu_details {
   background: white;
   border-radius: 15px;
-  box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
   margin: 1rem 0;
+  overflow: hidden;
   align-items: center;
+  position: relative;
   justify-content: space-between;
   padding: 0 1rem 1rem 1rem;
-  font-size: 1rem;
-  font-weight: 700;
+  cursor: pointer;
   width: 100%;
 }
 
@@ -131,46 +222,91 @@ input {
   justify-content: space-between;
   cursor: pointer;
 }
-
-.price {
-    font-weight: 800;
-    color: black;
+.text_menu p {
+  font-weight: 300;
+  color: #424242;
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 90%;
+}
+.text_menu .price {
+  font-weight: 800;
+  display: flex;
+  justify-content: flex-end;
+  position: relative;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  color: black;
+  width: 20%;
 }
 
 .price:hover {
-    margin-right: 5rem;
-    transition: 0.5s ease-in-out;
-    transition-duration: 1s;
+  margin-right: 5rem;
+  transition: 0.5s ease-in-out;
+  transition-duration: 1s;
 }
 
 .choice_ok {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
+  width: 7rem;
+  height: 100%;
+  background: var(--color-tertiary);
   transition-duration: 0.5s;
-  float: right;  
+  transition-timing-function: ease;
+  position: absolute;
+  right: 0;
+  top: 0rem;
+  overflow: hidden;
+  visibility: hidden;
+}
+.choice_ok:hover {
+  visibility: visible;
 }
 
-.choice_ok>i {
-  visibility: hidden;    
+.choice_ok > i {
+  visibility: hidden;
   background-color: var(--color-tertiary);
   color: white;
   width: 3rem;
-  border-radius: 10px;
-  justify-content: end;
-  align-items: center;
+  padding: 0.5rem;
+  border-radius: 50%;
   font-size: 1.5rem;
   transition: transform 0.5s ease-in-out;
 }
+.choice_ok > i:hover {
+  visibility: visible;
+}
 
+input:checked ~ .details .choice_ok {
+  margin-right: 0;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+}
+
+input:checked ~ .details i {
+  margin-right: 0;
+  transition-duration: 0.5s;
+  transition-timing-function: ease;
+  transform: rotate(360deg);
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .container_button {
   margin: 2rem;
   display: flex;
   justify-content: center;
 }
 
-.container_button>a {
+.container_button > a {
   color: white;
 }
 
@@ -178,18 +314,18 @@ input {
   border-radius: 30px;
   border: none;
   padding: 0.9rem 1.2rem;
-  box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
-  background: rgb(255,121,218);
-  background: -moz-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-  background: -webkit-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-  background: linear-gradient(135deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.3);
+  background: -webkit-linear-gradient(var(--color-secondary), var(--color-primary));
   font-weight: 400;
   cursor: pointer;
 }
-
+.button_order:hover {
+  background: linear-gradient(356deg, #a86ee0 0%, #ff93e1 100%);
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.5);
+}
 
 /* Footer */
-
 #container_footer {
   width: 100%;
   display: flex;
@@ -198,6 +334,11 @@ input {
   padding: 1rem;
   color: white;
   background-color: #353535;
+}
+@media screen and (min-width: 1000px) {
+  #container_footer {
+    justify-content: center;
+  }
 }
 
 .list_footer {
@@ -216,7 +357,7 @@ footer h2 {
   margin-top: 1rem;
 }
 
-.list_footer>a {
+.list_footer > a {
   color: white;
   flex-direction: column;
   margin: 0.3rem 0;
@@ -224,6 +365,7 @@ footer h2 {
 }
 
 .list_footer i {
-  width: 10%;
+  width: 2rem;
 }
 
+/*# sourceMappingURL=la_note_enchantee.css.map */
