--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ input[type=text]::placeholder {
   color: #ffffff;
   background: -webkit-linear-gradient(var(--color-secondary), var(--color-primary));
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1rem;
   justify-content: center;
   align-items: center;
   cursor: pointer;
@@ -276,7 +276,7 @@ input[type=text]::placeholder {
   width: 100%;
 }
 .functioning_card:hover {
-  background: #f5edff;
+  background: #f2f2f2;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
 .functioning_card:hover .button_functioning i {
