--- a/main.scss
+++ b/main.scss
@@ -1,3 +1,8 @@
+$height_card: 15rem;
+$height_picture_menu: 28rem; 
+$height_picture_index: 11rem;
+$bg-color_light-grey: #f6f6f6;
+
 * {
     margin: 0;
     padding: 0;
@@ -6,28 +11,123 @@
     --color-secondary: #ff79da;
     --color-tertiary: #99e2d0;
   }
+
+  .loader{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background: #f2f2f2;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    opacity: 0.8;
+    transition: opacity 0.3s ease-out;
+    animation: loadinger 0.3s;
+    animation-delay: 3s;
+    animation-fill-mode: both;
+  }
+  
+  .dots {
+    width: 3rem;
+    height: 3rem;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+  }
+  
+  .dots > div {
+    width: 0.5em;
+    height: 0.5em;
+    background: #9356dc;
+    background: linear-gradient(90deg,#9356dc 0%, #ff79da 80%);
+    background: -webkit-linear-gradient(90deg,#9356dc 0%, #ff79da 80%);
+    background: -moz-linear-gradient(90deg,#9356dc 0%, #ff79da 80%); 
+    animation: fade 1.5s alternate ease-in-out 3;
+    border-radius: 50%;
+  }
+  
+  .dots > div:nth-of-type(2),
+  .dots > div:nth-of-type(4) {
+    animation-delay: 0.25s;
+  }
+  
+  .dots > div:nth-of-type(3),
+  .dots > div:nth-of-type(5),
+  .dots > div:nth-of-type(7) {
+    animation-delay: 0.5s;
+  }
+  
+  .dots > div:nth-of-type(6),
+  .dots > div:nth-of-type(8) {
+    animation-delay: 0.75s;
+  }
+  
+  .dots > div:nth-of-type(9) {
+    animation-delay: 1s;
+  }
+  
+  @keyframes fade {
+    to {
+      opacity: 0.2;
+    }
+  }
+  
+  @keyframes loadinger {
+    100% {
+      opacity: 1;
+      visibility: hidden;
+    }
+  }
+  
+  .loader>span {
+    margin: 2rem;
+    text-align: center;
+    font-size: 2rem;
+    font-family: "Shrikhand", sans-serif;
+    font-weight: 700;
+    text-shadow : 0 0 5px #9356dc;
+  }
   
   body {
     font-family: "Roboto", sans-serif;
     font-size: 16px;
+    min-width: 309px;
   }
-  
-  h1 {
+
+  .top_title {
     margin: 1.5rem auto 0.6rem;
     font-size: 1.5rem;
     font-weight: 700;
   }
 
-  h2 {
+  .title_section {
     font-weight: 800;
     font-size: 1.5rem;
     margin: 1.5rem 0 1rem 0;
   }
   
-  h3 {
+  h4 {
     margin-bottom: 0.4rem;
     font-size: 1rem;
     font-weight: 800;
+  }
+
+  .title_name_restau {
+    font-family: "Shrikhand", sans-serif;
+    font-size: 1.5rem;
+    font-weight: 500;
+  }
+
+  .title_menu_part {
+    font-weight: 400;
+    font-size: 1rem;
+    margin: 1.5rem 0 1rem 0;
+    color: #424242;
+    border-bottom: 3px solid var(--color-tertiary);
+    padding-bottom: 0.5rem;
+    width: 2.5rem;
   }
 
   p {
@@ -38,6 +138,7 @@
   a, a:visited {
     text-decoration: none;
     color: black;
+    cursor: pointer;
   }
 
   /* Header */
@@ -50,11 +151,21 @@
     text-align: center;
   }
 
-  #logo img {
+  #logo .main_logo {
+    font-family: "Shrikhand", sans-serif;
+    font-weight: 500;
     width: 10rem;
-    height: 3rem;
+    height: 2.5rem;
+    text-align: center;
+    font-size: 1.8rem;
+    display: inline-block;
+    margin: 0.3rem 0;
   }
 
+  #logo i {
+    float: left;
+    margin: 1rem 0 0 1rem;
+  }
 
   /* Searchbar */
 
@@ -79,6 +190,9 @@
   input {
     border: none;
     background-color: #f1f1f1;
+    -webkit-appearance: none;
+       -moz-appearance: none;
+            appearance: none;
   }
   
   input[type="text"]::placeholder {
@@ -92,7 +206,7 @@
   /* Presentation */
 
   .first_container {
-    background-color: #f6f6f6;
+    background-color: $bg-color_light-grey;
   }
 
   .content_container {
@@ -104,8 +218,8 @@
     padding: 1rem 1rem 2rem 1rem;
   }
 
-  .container_button {
-    margin: 2rem;
+  .first_button {
+    margin: 2rem 0;
   }
 
   .button_explore {
@@ -115,16 +229,25 @@
       height: 10rem;
       min-width: 50rem;
       box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
-      color: white;
-      background: rgb(255,121,218);
-      background: -moz-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-      background: -webkit-linear-gradient(-45deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
-      background: linear-gradient(135deg, rgb(255,121,218) 0%, rgb(147,86,220) 100%);
+      color: #ffffff;
+      background: -webkit-linear-gradient(var(--color-secondary), var(--color-primary));
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1rem;
       justify-content: center;
       align-items: center;
       cursor: pointer;
+      &:visited {
+        color: white;
+      }
+      &:hover {
+        background: linear-gradient(
+          356deg,
+          lighten(rgba(155, 89, 220, 1), 5%) 0%,
+          lighten(rgba(255, 121, 218, 1), 5%) 100%
+        );        
+        -webkit-box-shadow: 0px 5px 10px rgb(0 0 0 / 50%);
+        box-shadow: 0px 5px 10px rgb(0 0 0 / 50%);
+        }
   }
 
   /* Functioning */
@@ -134,15 +257,24 @@
     flex-direction: column;
     justify-content: start;
     padding: 1rem;
+    @media screen and (min-width: 880px) {
+      padding-top: 0;
+    }
   }
 
   .list_button_functioning {
     margin-left: 0.5rem;
+    @media screen and (min-width: 880px) {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-content: space-between;
+      gap: 1.5rem;
+    }
   }
 
   .functioning_card {
     height: 60px;
-    background: #f6f6f6;
+    background: $bg-color_light-grey;
     border-radius: 20px;
     box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
     display: inline-flex;
@@ -152,6 +284,17 @@
     font-size: 1rem;
     font-weight: 700;
     width: 100%;
+    &:hover {
+      background: #f2f2f2;
+      box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
+    }
+    &:hover .button_functioning i {
+      color: var(--color-primary);
+    }
+    @media screen and (min-width: 880px) {
+      height: 80px;
+      width: auto;
+    }
   }
 
   .number {
@@ -178,6 +321,9 @@
 
   .button_functioning {
     padding: 1rem;
+    @media screen and (min-width: 880px) {
+      padding: 0;
+    }
   }
 
   .button_functioning>i {
@@ -192,9 +338,8 @@
     display: flex;
     flex-direction: column;
     justify-content: start;
-    padding: 1rem;
-    margin-bottom: 2rem;
-    background-color: #f6f6f6;
+    padding: 1rem 1rem 3rem 1rem;
+    background-color: $bg-color_light-grey;
   }
 
   .restaurant {
@@ -203,6 +348,16 @@
     margin-bottom: 1rem;
     box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
     cursor: pointer;
+    position: relative;
+  }
+
+  #container_restaurants {
+    @media screen and (min-width: 880px) {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 2rem;
+    }
   }
 
   .new {
@@ -223,7 +378,7 @@
     background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
     background-size: cover;
     background-position: 50% 60%;
-    height: 11rem;
+    height: $height_picture_index;
     width: 100%;
     border-radius: 20px 20px 0 0;
   }
@@ -232,7 +387,7 @@
     background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
     background-size: cover;
     background-position: 50% 60%;
-    height: 11rem;
+    height: $height_picture_index;
     width: 100%;
     border-radius: 20px 20px 0 0;
   }
@@ -241,7 +396,7 @@
     background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
     background-size: cover;
     background-position: 50% 60%;
-    height: 11rem;
+    height: $height_picture_index;
     width: 100%;
     border-radius: 20px 20px 0 0;
   }
@@ -250,9 +405,15 @@
     background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
     background-size: cover;
     background-position: 50% 60%;
-    height: 11rem;
+    height: $height_picture_index;
     width: 100%;
     border-radius: 20px 20px 0 0;
+  }
+
+  #la_palette_du_gout, #la_note_enchantee, #a_la_francaise, #le_delice_des_sens {
+    @media screen and (min-width: 1000px) {
+      height: $height_card;
+    }
   }
 
   .block_description {
@@ -266,7 +427,7 @@
     cursor: pointer;
   }
 
-  .clic_heart>i {
+  .clic_heart1>i {
     color: #6d6d6d;
     display: flex;
     justify-content: flex-end;
@@ -277,7 +438,65 @@
     padding-bottom: 1rem;
   }
 
-  .clic_heart>input {
+  .clic_heart>i {
+    color: #6d6d6d;
+    display: flex;
+    justify-content: flex-end;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 100;
+    margin-top: -2rem;
+  }
+
+  input:checked ~ .fa-heart {
+    transition-duration: 0.5s;
+    opacity: 1;
+    font-weight: 800;
+    background: -webkit-linear-gradient(-45deg, #ff79da 0%, #9356dc 100%);  
+    background-clip: text;
+    -webkit-background-clip: text;    
+    -webkit-text-fill-color: transparent;
+    -webkit-animation: heartchecked 0.8s Linear both;
+            animation: heartchecked 0.8s Linear both;
+  }
+
+  @keyframes heartchecked {
+      0% {
+          opacity: 0;
+          }
+      25% {
+          opacity: 0.25;
+          }    
+      50% {
+          opacity: 0.5;
+      }
+      75% {
+          opacity: 0.75;
+      }
+      100% {
+          opacity: 1;
+      }
+    }  
+
+    @-webkit-keyframes heartchecked {
+      0% {
+          opacity: 0;
+          }
+      25% {
+          opacity: 0.25;
+          }    
+      50% {
+          opacity: 0.5;
+      }
+      75% {
+          opacity: 0.75;
+      }
+      100% {
+          opacity: 1;
+      }
+    }
+
+  .clic_heart>input, .clic_heart1>input {
     appearance: none;
   }
 
@@ -300,10 +519,13 @@
     margin-bottom: 2rem;
   }
 
-  footer h2 {
+  h5 {
     font-family: "Shrikhand", sans-serif;
     font-weight: 500;
-    margin-top: 1rem;
+    font-size: 1.3rem;
+    color: white;
+    border-bottom: transparent;
+    margin: 1.5rem 0 1rem 0;
   }
 
   .list_footer>a {
@@ -314,5 +536,293 @@
   }
 
   .list_footer i {
-    width: 10%;
+    width: 2rem;
   }
+
+  /**** page menu ****/
+
+  .heart {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    cursor: pointer;
+    font-size: 1.7rem;
+    font-weight: 100;
+    color: #6d6d6d;
+    margin-right: 1.5rem;
+  }
+
+  /* Main picture */
+
+  .picture_food__la_palette {
+    background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+    height: $height_picture_menu;
+    width: 100%;
+  }
+
+  .picture_food__la_note {
+    background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+    height: $height_picture_menu;
+    width: 100%;
+  }
+
+  .picture_food__le_delice {
+    background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
+    background-size: cover;
+    background-position: 50% 50%;
+    height: $height_picture_menu;
+    width: 100%;
+  }
+  
+  .picture_food__a_la_francaise {
+    background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
+    background-size: cover;
+    background-position: 40% 50%;
+    height: $height_picture_menu;
+    width: 100%;
+}
+
+ /* Main section */
+
+ .menu_page {
+  @media screen and (min-width: 1000px) {
+  margin-left: 1rem;
+  margin-right: 1rem;
+  }
+}
+
+#title_icon {
+  align-content: start;
+  display: flex;
+  justify-content: space-between;
+}
+
+/*** menu card ***/
+  
+.main_section {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  border-radius: 50px 50px 0 0;
+  padding: 2rem 1rem 1rem 1rem;
+  margin-top: -3rem;
+  background-color: $bg-color_light-grey;
+  @media screen and (min-width: 1000px) {
+    margin-left: auto;
+    margin-right: auto;
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    }
+}
+
+ .list_menu{
+  @media screen and (min-width: 1000px) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+ }
+
+.main_section {
+  .starter {
+    -webkit-animation: appear 1s Linear both;
+            animation: appear 1s Linear both;
+    @media screen and (min-width: 1000px) {
+      width: 30%;
+    }
+  }
+  .dish {
+    -webkit-animation: appear 2.5s Linear both;
+            animation: appear 2.5s Linear both;
+    @media screen and (min-width: 1000px) {
+      width: 30%;
+    }
+  }
+  .dessert {
+    -webkit-animation: appear 4s Linear both;
+            animation: appear 4s Linear both;
+    @media screen and (min-width: 1000px) {
+      width: 30%;
+    } 
+  }
+}
+
+@-webkit-keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }    
+  50% {
+    opacity: 0.5;
+  }
+ 75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 0.25;
+  }    
+  50% {
+    opacity: 0.5;
+  }
+ 75% {
+    opacity: 0.75;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.menu_details {
+  background: white;
+  border-radius: 15px;
+  box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
+  margin: 1rem 0;
+  overflow: hidden;
+  align-items: center;
+  position: relative;
+  justify-content: space-between;
+  padding: 0 1rem 1rem 1rem;
+  cursor: pointer;
+  width: 100%;
+}
+
+.menu_details:hover .choice_ok {
+  margin-right: 0;
+  transition-duration: 0.5s;
+  transform: scaleX(1);
+  transition-timing-function: ease-in-out;
+}
+.menu_details:hover i {
+  -webkit-animation: rotate;
+          animation: rotate;
+  transform: scaleX(1);
+  transition: transform ease-in-out;
+  transform: rotate(360deg);
+  transition-duration: 0.5s;
+}
+
+.text_menu {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+  & p {
+  font-weight: 300;
+  color: #424242;
+  margin: 0;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  width: 90%;
+  }
+    & .price {
+      font-weight: 800;
+      display: flex;
+      justify-content: flex-end;
+      position: relative;
+      white-space: nowrap;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      color: black;
+      width: 20%;
+      transform: scaleX(1);
+      transform-origin: right;
+    }
+}
+
+.menu_details:hover .price {
+  margin-right: 5rem;
+  transition: 0.5s ease-in-out;
+  transform-origin: right;
+}
+
+.choice_ok {
+  width: 5rem;
+  height: 100vh;
+  background: var(--color-tertiary);
+  transition-duration: 1s;
+  transition-timing-function: ease;
+  position: absolute;
+  right: 0;
+  top: 0rem;
+  transform: scaleX(0);
+  transform-origin: right;
+}
+
+.choice_ok>i {
+  background-color: var(--color-tertiary);
+  color: white;
+  width: 3rem;
+  padding: 0.5rem;
+  border-radius: 50%;
+  font-size: 1.5rem;
+  transition-duration: 1s; 
+  display: flex;
+  justify-content: center;
+  margin: 1.1rem;
+  transform: scaleX(0);
+  transform: rotate(0deg);
+}
+
+
+@-webkit-keyframes rotate {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+@keyframes rotate {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.container_button {
+  margin: 2rem;
+  display: flex;
+  justify-content: center;
+}
+
+.container_button>a {
+  color: white;
+}
+
+.button_order {
+  border-radius: 30px;
+  border: none;
+  padding: 0.9rem 1.2rem;
+  box-shadow: 0px 5px 10px rgb(0 0 0 / 30%);
+  background: -webkit-linear-gradient(var(--color-secondary), var(--color-primary));
+  font-weight: 400;
+  cursor: pointer;
+  &:hover {
+    background: linear-gradient(
+      356deg,
+      lighten(rgba(155, 89, 220, 1), 5%) 0%,
+      lighten(rgba(255, 121, 218, 1), 5%) 100%
+    );
+    box-shadow: 0px 5px 10px rgb(0 0 0 / 50%);
+    }
+}
