--- a/menu.css
+++ b/menu.css
@@ -65,9 +65,13 @@ input {
   text-align: center;
 }
 
-#logo img {
+#logo .main_logo {
   width: 10rem;
-  height: 3rem;
+  height: 2.5rem;
+  text-align: center;
+  font-size: 1.8rem;
+  display: inline-block;
+  margin-top: 0.2rem;
 }
 
 #logo i {
