--- a/CSS/style.css
+++ b/CSS/style.css
@@ -276,7 +276,7 @@ input[type=text]::placeholder {
   width: 100%;
 }
 .functioning_card:hover {
-  background: #f2f2f2;
+  background: #f5edff;
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.4);
 }
 .functioning_card:hover .button_functioning i {
@@ -368,7 +368,7 @@ input[type=text]::placeholder {
 }
 
 #la_palette_du_gout {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
   background-size: cover;
   background-position: 50% 60%;
   height: 11rem;
@@ -377,7 +377,7 @@ input[type=text]::placeholder {
 }
 
 #la_note_enchantee {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
   background-size: cover;
   background-position: 50% 60%;
   height: 11rem;
@@ -386,7 +386,7 @@ input[type=text]::placeholder {
 }
 
 #a_la_francaise {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
   background-size: cover;
   background-position: 50% 60%;
   height: 11rem;
@@ -395,7 +395,7 @@ input[type=text]::placeholder {
 }
 
 #le_delice_des_sens {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
   background-size: cover;
   background-position: 50% 60%;
   height: 11rem;
@@ -543,7 +543,7 @@ h5 {
 
 /* Main picture */
 .picture_food__la_palette {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/la_palette_du_gout.jpg");
   background-size: cover;
   background-position: 50% 50%;
   height: 28rem;
@@ -551,7 +551,7 @@ h5 {
 }
 
 .picture_food__la_note {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/la_note_enchantee.jpg");
   background-size: cover;
   background-position: 50% 50%;
   height: 28rem;
@@ -559,7 +559,7 @@ h5 {
 }
 
 .picture_food__le_delice {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/le_delice_des_sens.jpg");
   background-size: cover;
   background-position: 50% 50%;
   height: 28rem;
@@ -567,7 +567,7 @@ h5 {
 }
 
 .picture_food__a_la_francaise {
-  background-image: url("./Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
+  background-image: url("../Maquettes_Ohmyfood/images/restaurants/a_la_francaise.jpg");
   background-size: cover;
   background-position: 40% 50%;
   height: 28rem;
